[package]
name = "primitypes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bit-vec = { version = "0.6.3", features = ["serde"] }
rand = "0.8.5"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
ts-rs = { version = "7.1.1", features = ["chrono-impl", "uuid-impl"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
openssl = { version = "0.10.62", features = ["vendored"] }
serde_repr = "0.1.18"
lazy_static = "1.4.0"
bitvec = { version = "1.0.1", features = ["serde"] }
validator = { version = "0.16.1", features = ["derive"] }
chrono = { version = "0.4.34", features = ["serde"] }
serde_bytes = "0.11.14"

[dependencies.sqlx]
version = "0.8.2"
default-features = false
features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "rust_decimal", "json", "bit-vec"]


[lib]
name="primitypes"
path="src/lib.rs"
crate-type=["rlib"]
